testsuite/testcases/src/test/cases/unicode-scripts/unicode-scripts-f-flex.output
Reading "src/test/cases/unicode-scripts/unicode-scripts-f.flex"
Including "src/test/cases/unicode-scripts/common-unicode-scripts-java"

Error in file "src/test/cases/unicode-scripts/unicode-scripts-f.flex" (line 14): 
Invalid Unicode property
\p{Script:This will never be a script name} { setCurCharBlock("Never a script name"); }
   ^
